# fcitx5-table-lekhika

./: .gitartibutes  .gitignore  CMakeLists.txt  Messages.sh  README  lekhika.conf..bak.in  readme.md  theme-installer.sh
icons/: CMakeLists.txt
po/: LINGUAS  en.po  fcitx5-table-lekhika.pot  hi.po
scripts/: dictionary-maker.py  header.txt  nepali.txt  numbers.txt  symbols.txt  table-maker.py  table.txt  transliterated_words.txt
tables/: CMakeLists.txt  lekhika-test.conf.in  lekhika-test.txt  lekhika.conf.in  lekhika.txt
themes/: classicui.conf
themes/lekhika-dark/: theme.conf
